docs-kits_versioned_docs/version-23.09/kits/Business Partner Kit/Software Development View/Pool Api/get-sites.api.mdx
---
id: get-sites
title: "Get site partners of a legal entity"
description: "Get business partners of type site belonging to a business partner of type legal entity, identified by the business partner's bpnl ignoring case."
sidebar_label: "Get site partners of a legal entity"
hide_title: true
hide_table_of_contents: true
api: {"tags":["legal-entity-controller"],"description":"Get business partners of type site belonging to a business partner of type legal entity, identified by the business partner's bpnl ignoring case.","operationId":"getSites","parameters":[{"name":"bpnl","in":"path","description":"Bpnl value","required":true,"schema":{"type":"string"}},{"name":"page","in":"query","description":"Number of page to get results from","required":false,"schema":{"minimum":0,"type":"string","default":"0"}},{"name":"size","in":"query","description":"Size of each page","required":false,"schema":{"maximum":100,"minimum":0,"type":"string","default":"10"}}],"responses":{"200":{"description":"The sites for the specified bpnl","content":{"application/json":{"schema":{"type":"object","properties":{"totalElements":{"type":"integer","description":"Total number of all results in all pages","format":"int64"},"totalPages":{"type":"integer","description":"Total number pages","format":"int32"},"page":{"type":"integer","description":"Current page number","format":"int32"},"contentSize":{"type":"integer","description":"Number of results in the page","format":"int32"},"content":{"type":"array","description":"Collection of results in the page","items":{"type":"object","properties":{"bpns":{"type":"string","description":"Business Partner Number, main identifier value for sites"},"name":{"type":"string","description":"Site name"},"states":{"type":"array","items":{"type":"object","properties":{"description":{"type":"string","description":"Description of the status"},"validFrom":{"type":"string","description":"Since when the status is/was valid","format":"date-time"},"validTo":{"type":"string","description":"Until the status was valid, if applicable","format":"date-time"},"type":{"type":"object","properties":{"technicalKey":{"type":"string","enum":["ACTIVE","INACTIVE"]},"name":{"type":"string"}},"description":"Named type uniquely identified by its technical key"}},"description":"Status record of a site"}},"bpnLegalEntity":{"type":"string","description":"Business Partner Number of the related legal entity"},"createdAt":{"type":"string","description":"The timestamp the business partner data was created","format":"date-time"},"updatedAt":{"type":"string","description":"The timestamp the business partner data was last updated","format":"date-time"}},"description":"Site of a legal entity"}}},"description":"Paginated collection of results"}}}},"400":{"description":"On malformed pagination request"},"404":{"description":"No business partner found for specified bpnl"}},"method":"get","path":"/api/catena/legal-entities/{bpnl}/sites","servers":[{"url":"http://localhost:8080","description":"Generated server url"}],"info":{"title":"Business Partner Data Management Pool","description":"Service that manages and shares business partner data with other CatenaX services","version":"4.0.0-SNAPSHOT"},"postman":{"name":"Get site partners of a legal entity","description":{"content":"Get business partners of type site belonging to a business partner of type legal entity, identified by the business partner's bpnl ignoring case.","type":"text/plain"},"url":{"path":["api","catena","legal-entities",":bpnl","sites"],"host":["{{baseUrl}}"],"query":[{"disabled":false,"description":{"content":"Number of page to get results from","type":"text/plain"},"key":"page","value":""},{"disabled":false,"description":{"content":"Size of each page","type":"text/plain"},"key":"size","value":""}],"variable":[{"disabled":false,"description":{"content":"(Required) Bpnl value","type":"text/plain"},"type":"any","value":"","key":"bpnl"}]},"header":[{"key":"Accept","value":"application/json"}],"method":"GET"}}
sidebar_class_name: "get api-method"
info_path: docs-kits/kits/Business Partner Kit/Software Development View/Pool Api/business-partner-data-management-pool
custom_edit_url: null
---

import ApiTabs from "@theme/ApiTabs";
import MimeTabs from "@theme/MimeTabs";
import ParamsItem from "@theme/ParamsItem";
import ResponseSamples from "@theme/ResponseSamples";
import SchemaItem from "@theme/SchemaItem";
import SchemaTabs from "@theme/SchemaTabs";
import DiscriminatorTabs from "@theme/DiscriminatorTabs";
import TabItem from "@theme/TabItem";

## Get site partners of a legal entity



Get business partners of type site belonging to a business partner of type legal entity, identified by the business partner's bpnl ignoring case.

<details style={{"marginBottom":"1rem"}} data-collapsed={false} open={true}><summary style={{}}><strong>Path Parameters</strong></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"bpnl","in":"path","description":"Bpnl value","required":true,"schema":{"type":"string"}}}></ParamsItem></ul></div></details><details style={{"marginBottom":"1rem"}} data-collapsed={false} open={true}><summary style={{}}><strong>Query Parameters</strong></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"page","in":"query","description":"Number of page to get results from","required":false,"schema":{"minimum":0,"type":"string","default":"0"}}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"size","in":"query","description":"Size of each page","required":false,"schema":{"maximum":100,"minimum":0,"type":"string","default":"10"}}}></ParamsItem></ul></div></details><div><ApiTabs><TabItem label={"200"} value={"200"}><div>

The sites for the specified bpnl

</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"totalElements"} required={false} deprecated={undefined} schemaDescription={"Total number of all results in all pages"} schemaName={"int64"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"totalPages"} required={false} deprecated={undefined} schemaDescription={"Total number pages"} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"page"} required={false} deprecated={undefined} schemaDescription={"Current page number"} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"contentSize"} required={false} deprecated={undefined} schemaDescription={"Number of results in the page"} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>content</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Collection of results in the page

</div><SchemaItem collapsible={false} name={"bpns"} required={false} deprecated={undefined} schemaDescription={"Business Partner Number, main identifier value for sites"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"name"} required={false} deprecated={undefined} schemaDescription={"Site name"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>states</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"description"} required={false} deprecated={undefined} schemaDescription={"Description of the status"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"validFrom"} required={false} deprecated={undefined} schemaDescription={"Since when the status is/was valid"} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"validTo"} required={false} deprecated={undefined} schemaDescription={"Until the status was valid, if applicable"} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>type</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Named type uniquely identified by its technical key

</div><SchemaItem collapsible={false} name={"technicalKey"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={"**Possible values:** [`ACTIVE`, `INACTIVE`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"name"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"bpnLegalEntity"} required={false} deprecated={undefined} schemaDescription={"Business Partner Number of the related legal entity"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"createdAt"} required={false} deprecated={undefined} schemaDescription={"The timestamp the business partner data was created"} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"updatedAt"} required={false} deprecated={undefined} schemaDescription={"The timestamp the business partner data was last updated"} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"totalElements\": 0,\n  \"totalPages\": 0,\n  \"page\": 0,\n  \"contentSize\": 0,\n  \"content\": [\n    {\n      \"bpns\": \"string\",\n      \"name\": \"string\",\n      \"states\": [\n        {\n          \"description\": \"string\",\n          \"validFrom\": \"2023-06-26\",\n          \"validTo\": \"2023-06-26\",\n          \"type\": {\n            \"technicalKey\": \"ACTIVE\",\n            \"name\": \"string\"\n          }\n        }\n      ],\n      \"bpnLegalEntity\": \"string\",\n      \"createdAt\": \"2023-06-26\",\n      \"updatedAt\": \"2023-06-26\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"400"} value={"400"}><div>

On malformed pagination request

</div><div></div></TabItem><TabItem label={"404"} value={"404"}><div>

No business partner found for specified bpnl

</div><div></div></TabItem></ApiTabs></div>
      